(web) enable live reload; fix div#authors overflow

--- a/web/static/theme/style.css
+++ b/web/static/theme/style.css
@@ -237,10 +237,6 @@ button small {
   line-height: 1.0em;
 }
 
-#authors span {
-  white-space:nowrap; 
-}
-
 #authors sup a, .footnote {
   text-decoration: none !important;
 }
